Bugfix: on narrow display the primary submenu no longer pops down on hover.

--- a/digipal/static/css/dpbase.less
+++ b/digipal/static/css/dpbase.less
@@ -685,9 +685,9 @@ different height depending when they are selected and push the other values down
 }
 
 .auto-open:hover > ul.dropdown-menu {
-    //@media (min-width: @grid-float-breakpoint) {
+    @media (min-width: @grid-float-breakpoint) {
         display: block;
-    //}
+    }
 }
 
 .auto-open a {
